# routesim

./: Cargo.toml  README  README.md
process/bow_tie_steady_03/: processed_email_uoe_10000_240_86400_noguard.pickle  processed_email_uoe_10000_240_86400_withguard.pickle  processed_email_uoe_10000_365_86400_noguard.pickle  processed_email_uoe_10000_365_86400_withguard.pickle  processed_frochet_email_10000_240_86400_noguard.pickle  processed_frochet_email_10000_240_86400_withguard.pickle  processed_frochet_email_10000_365_86400_noguard.pickle  processed_frochet_email_10000_365_86400_withguard.pickle  processed_tariq_email_10000_240_86400_noguard.pickle  processed_tariq_email_10000_240_86400_withguard.pickle  processed_tariq_email_10000_365_86400_noguard.pickle  processed_tariq_email_10000_365_86400_withguard.pickle
process/loopix_bowtie_steady_03/: processed_email_uoe_10000_365_86400_noguard.pickle  processed_email_uoe_10000_365_86400_withguard.pickle
scripts/: guard_vs_no_guard_email.sh  guard_vs_no_guard_static.sh  guard_vs_no_guard_static_email.sh  plot_processed_sim.py  process-mailbox.py  process_sim.py  simple_simulation.sh  split_csv_file.sh
src/: config.rs  histogram.rs  loopixemailmodel.rs  mailbox.rs  main.rs  routesim.rs  simplemodel.rs  userasyncmodel.rs  usermodel.rs
testfiles/: 1000_137_Random_BP_layout.csv  dynamic_smart_hyper_hyper_0.015_layout.csv  dynamic_smart_hyper_hyper_0.03_layout.csv  dynamic_smart_hyper_hyper_0.05_layout.csv  dynamic_smart_hyper_hyper_0.075_layout.csv  dynamic_smart_hyper_hyper_0.1_layout.csv  sizes.json  split_csv_file.sh  tariq_sizes.json  timestamps.json
(+1037 files in other folders)
