[package]
name = "routesim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
rand = {version = "0.8.4", features=["small_rng"]}
clap = "3.0.0-beta.4"
rustc-hash = "1.0"
crossbeam-channel = "0.5.2"
array-init = "2.0.0"

[profile.release]
lto = true
debug = 1
codegen-units = 1
