[package]
name = "routesim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
rand = {version = "0.8.4", features=["small_rng"]}
rand_distr = "0.4.3"
clap = { version = "3.1.0", features = ["derive"] }
rustc-hash = "1.0"
crossbeam-channel = "0.5.2"
array-init = "2.0.0"
histogram-sampler = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.19"
siphasher = "0.3.9"

[profile.release]
lto = true
debug = 1
codegen-units = 1

